# air-castles

./: README.md  update-script.sh  worker.js
_out/: t.js
build-worker/: pyproject.toml
build-worker/build_worker/: build_worker.py
build-worker/tests/: test_build_worker.py
worker/: resolvedWorker.js  workerTemplate.js
worker-utils/: pyproject.toml
worker-utils/tests/: test_worker_utils.py
worker-utils/worker_utils/build_worker/: build_worker.py
worker-utils/worker_utils/lib/: file_paths.py
worker-utils/worker_utils/upload_worker/: upload_worker.py
