[tool.poetry]
name = "worker-utils"
version = "0.1.0"
description = "Generates a Cloudflare Worker script and uploads it to Cloudflare for aircastles.xyz."
authors = ["Rohan Bansal <rohanarunbansal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bw = 'worker_utils.build_worker.build_worker:main'
uw = 'worker_utils.upload_worker.upload_worker:main'
